<resources>
    <string name="app_name">Amader Doctor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guide1">Breathing difficulties</string>
    <string name="guide2">Fit and/or epileptic seizure</string>
    <string name="guide3">Heart attack</string>
    <string name="guide4">A stroke</string>
    <string name="guide5">Severe Fever</string>
    <string name="guide6">Burns and Scalds</string>
    <string name="guide7"> Electrocution</string>
</resources>