<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#040404"
    tools:context=".PatientActivities.TipsActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="233dp"
        android:layout_height="71dp"
        android:layout_marginTop="48dp"
        android:background="#401F7A"
        android:gravity="center"
        android:text="Emergency Guide"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="490dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="33dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/guide1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/guide2"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/guide3"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/guide4"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/guide5"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/guide6"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/guide7"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>